--- a/Frontend/SuperMainMain/app/src/main/res/drawable/button_white.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/drawable/button_white.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Define the background shape when the button is not pressed -->
     <item android:state_pressed="false">
         <shape android:shape="oval">
+            <!-- Define the background color of the shape as white -->
             <solid android:color="#FFFFFF"/>
         </shape>
     </item>
+    <!-- Define the background shape when the button is pressed -->
     <item android:state_pressed="true">
         <shape android:shape="oval">
+            <!-- Define the background color of the shape as a dark blue color -->
             <solid android:color="#1805C2"/>
         </shape>
     </item>
