--- a/Frontend/SuperMainMain/app/src/main/res/drawable/shadowbox.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/drawable/shadowbox.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--the shadow comes from here-->
+    <!-- Create a shadow effect around the shape -->
     <item
         android:bottom="0dp"
         android:drawable="@android:drawable/dialog_holo_light_frame"
         android:left="0dp"
         android:right="0dp"
-        android:top="0dp">
-
+        android:top="0dp"
+        android:radius="10dp">
     </item>
 
+    <!-- Define the background shape -->
     <item
         android:bottom="0dp"
         android:left="0dp"
         android:right="0dp"
-        android:top="0dp">
-        <!--whatever you want in the background, here i preferred solid white -->
+        android:top="0dp"
+        android:radius="10dp">
+        <!-- Define the shape of the background -->
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-
+            <!-- Define the background color of the shape -->
+            <solid android:color="#34d5eb" />
+            <!-- Define the radius of the corners of the shape -->
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
