--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".AllNews">
 
+    <!-- A TextView to display all the news -->
     <TextView
         android:id="@+id/allnewstextview"
         android:layout_width="343dp"
@@ -14,9 +17,11 @@
         android:layout_marginTop="23dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="56dp"
-        android:text="TextView"
+        android:background="@drawable/shadowbox"
+        android:text="All the news is displayed here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
