--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_burger_menu.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_burger_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".burgerMenu">
 
+    <!-- Menu title -->
     <TextView
         android:id="@+id/menu"
         android:layout_width="wrap_content"
@@ -23,6 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Divider between menu title and menu options -->
     <View
         android:id="@+id/divider3"
         android:layout_width="409dp"
@@ -36,6 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu" />
 
+    <!-- Menu option 1 -->
     <TextView
         android:id="@+id/menulatestnews"
         android:layout_width="128dp"
@@ -50,9 +53,9 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/menufactcheck"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Menu option 2 -->
     <TextView
         android:id="@+id/menufactcheck"
         android:layout_width="128dp"
@@ -69,6 +72,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
+    <!-- Menu option 3 -->
     <TextView
         android:id="@+id/menucontactus"
         android:layout_width="128dp"
@@ -85,6 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Menu option 3 -->
     <TextView
         android:id="@+id/menufaq"
         android:layout_width="128dp"
@@ -102,6 +108,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Divider between menu title and menu options -->
     <View
         android:id="@+id/divider4"
         android:layout_width="409dp"
@@ -116,4 +123,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menufaq" />
+
+    <!-- Version title -->
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginBottom="27dp"
+        android:text="@string/version"
+        android:textAlignment="center"
+        android:textColor="@color/sleepy_black"
+        android:textSize="14sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
