More updates to UI

--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
@@ -14,7 +14,14 @@
         android:layout_marginTop="23dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="56dp"
-        android:text="TextView"
+        android:background="@drawable/shadowbox"
+        android:fontFamily="@font/montserrat"
+        android:isScrollContainer="true"
+        android:textStyle="italic"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:text="Fake News to be displayed here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
