--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,6 +17,12 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="56dp"
         android:background="@drawable/shadowbox"
+        android:fontFamily="@font/montserrat"
+        android:isScrollContainer="true"
+        android:textStyle="italic"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:text="All the news is displayed here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
