--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_faq.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_faq.xml
@@ -8,19 +8,22 @@
     android:background="@color/sleepy_black"
     tools:context=".faq">
 
-
+    <!-- The TextView that displays the title of the FAQ section -->
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/faq_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="55dp"
+        android:background="@drawable/shadowbox"
         android:fontFamily="@font/montserrat"
         android:text="@string/faq"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,6 +31,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <!-- The button that takes the user back to the previous screen -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/faqback"
         android:layout_width="wrap_content"
@@ -36,11 +40,11 @@
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="7dp"
         android:background="@drawable/roundbtnselector"
+        android:fontFamily="@font/montserrat"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25" />
-
+        app:layout_constraintTop_toBottomOf="@+id/faq_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
