--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -46,6 +46,7 @@
             android:layout_height="32sp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="492dp"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/latestnews"
             app:layout_constraintHorizontal_bias="0.0"
@@ -59,6 +60,7 @@
             android:layout_height="32sp"
             android:layout_marginEnd="80dp"
             android:layout_marginBottom="492dp"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/factcheck"
             app:srcCompat="@drawable/latestnews"
@@ -70,6 +72,7 @@
             android:layout_height="32sp"
             android:layout_marginEnd="80dp"
             android:layout_marginBottom="492dp"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/contact"
             app:srcCompat="@drawable/factcheck"
@@ -108,6 +111,7 @@
             android:layout_height="32sp"
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="492dp"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/btn_bar2"
             app:srcCompat="@drawable/team"
@@ -138,7 +142,7 @@
             android:layout_height="172dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="139dp"
-            android:background="@drawable/curvedsquarebutton"
+            android:background="@drawable/shadowbox_with_radius"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.244"
@@ -220,8 +224,9 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="31dp"
             android:layout_marginBottom="125dp"
-            android:background="@drawable/textbox"
+            android:background="@drawable/shadowbox"
             android:ems="10"
+            android:textColor="#FBFAFA"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -241,7 +246,8 @@
             android:layout_marginTop="29dp"
             android:layout_marginEnd="31dp"
             android:layout_marginBottom="2dp"
-            android:background="@drawable/textbox"
+            android:background="@drawable/shadowbox"
+            android:textColor="#FBFAFA"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
@@ -307,3 +313,305 @@
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
+<!--Not working-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--tools:context=".how_we_do_it">-->
+
+<!--<TextView-->
+<!--    android:id="@+id/btn_bar2"-->
+<!--    android:layout_width="412dp"-->
+<!--    android:layout_height="57dp"-->
+<!--    android:layout_marginStart="159dp"-->
+<!--    android:layout_marginTop="45dp"-->
+<!--    android:layout_marginEnd="194dp"-->
+<!--    android:layout_marginBottom="481dp"-->
+<!--    android:background="@drawable/rectangle"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.451"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintVertical_bias="0.864" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/logo_bar2"-->
+<!--    android:layout_width="412dp"-->
+<!--    android:layout_height="57dp"-->
+<!--    android:background="@drawable/rectangle"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="1.0"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toTopOf="parent"-->
+<!--    tools:ignore="VisualLintOverlap" />-->
+
+<!--<ImageButton-->
+<!--    android:id="@+id/newsnews"-->
+<!--    android:layout_width="32sp"-->
+<!--    android:layout_height="32sp"-->
+<!--    android:layout_marginStart="16dp"-->
+<!--    android:layout_marginBottom="492dp"-->
+<!--    android:background="#24cce3"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toStartOf="@+id/latestnews"-->
+<!--    app:layout_constraintHorizontal_bias="0.0"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:srcCompat="@drawable/newnews"-->
+<!--    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
+
+<!--<ImageButton-->
+<!--    android:id="@+id/latestnews"-->
+<!--    android:layout_width="32sp"-->
+<!--    android:layout_height="32sp"-->
+<!--    android:layout_marginEnd="80dp"-->
+<!--    android:layout_marginBottom="492dp"-->
+<!--    android:background="#24cce3"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toStartOf="@+id/factcheck"-->
+<!--    app:srcCompat="@drawable/latestnews"-->
+<!--    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
+
+<!--<ImageButton-->
+<!--    android:id="@+id/factcheck"-->
+<!--    android:layout_width="32sp"-->
+<!--    android:layout_height="32sp"-->
+<!--    android:layout_marginEnd="80dp"-->
+<!--    android:layout_marginBottom="492dp"-->
+<!--    android:background="#24cce3"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toStartOf="@+id/contact"-->
+<!--    app:srcCompat="@drawable/factcheck"-->
+<!--    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
+
+<!--<ImageView-->
+<!--    android:id="@+id/imageView2"-->
+<!--    android:layout_width="219dp"-->
+<!--    android:layout_height="55dp"-->
+<!--    android:layout_marginEnd="140dp"-->
+<!--    android:layout_marginBottom="549dp"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintTop_toTopOf="parent"-->
+<!--    app:layout_constraintVertical_bias="0.0"-->
+<!--    app:srcCompat="@drawable/image" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/project_z_logo2"-->
+<!--    android:layout_width="109dp"-->
+<!--    android:layout_height="40dp"-->
+<!--    android:layout_marginTop="16dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="Project Zterling"-->
+<!--    android:textAlignment="viewStart"-->
+<!--    android:textStyle="bold"-->
+<!--    app:layout_constraintBottom_toBottomOf="@+id/logo_bar2"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.626"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--<ImageButton-->
+<!--    android:id="@+id/contact"-->
+<!--    android:layout_width="32sp"-->
+<!--    android:layout_height="32sp"-->
+<!--    android:layout_marginEnd="48dp"-->
+<!--    android:layout_marginBottom="492dp"-->
+<!--    android:background="#24cce3"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="@+id/btn_bar2"-->
+<!--    app:srcCompat="@drawable/team"-->
+<!--    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/textView3"-->
+<!--    android:layout_width="120dp"-->
+<!--    android:layout_height="17dp"-->
+<!--    android:layout_marginStart="16dp"-->
+<!--    android:layout_marginTop="17dp"-->
+<!--    android:layout_marginEnd="337dp"-->
+<!--    android:layout_marginBottom="446dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="How We Do It"-->
+<!--    android:textColor="#FFFFFF"-->
+<!--    android:textStyle="italic"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.074"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/btn_bar2"-->
+<!--    app:layout_constraintVertical_bias="1.0" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/textView4"-->
+<!--    android:layout_width="362dp"-->
+<!--    android:layout_height="172dp"-->
+<!--    android:layout_marginTop="1dp"-->
+<!--    android:layout_marginBottom="139dp"-->
+<!--    android:background="@drawable/shadowbox_with_radius"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.244"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/textView3"-->
+<!--    app:layout_constraintVertical_bias="0.0" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/howto_step1"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginStart="34dp"-->
+<!--    android:layout_marginTop="16dp"-->
+<!--    android:layout_marginEnd="278dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="@string/howto_step1"-->
+<!--    android:textAlignment="viewStart"-->
+<!--    android:textColor="@color/black"-->
+<!--    android:textSize="10sp"-->
+<!--    android:textStyle="bold"-->
+<!--    app:layout_constraintEnd_toEndOf="@+id/textView4"-->
+<!--    app:layout_constraintHorizontal_bias="0.106"-->
+<!--    app:layout_constraintStart_toStartOf="@+id/textView4"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/textView3" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/howto_step2"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginTop="24dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="@string/howto_step2"-->
+<!--    android:textAlignment="viewStart"-->
+<!--    android:textColor="@color/black"-->
+<!--    android:textSize="10sp"-->
+<!--    android:textStyle="bold"-->
+<!--    app:layout_constraintEnd_toEndOf="@+id/textView4"-->
+<!--    app:layout_constraintHorizontal_bias="0.111"-->
+<!--    app:layout_constraintStart_toStartOf="@+id/textView4"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/howto_step1" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/howto_step3"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginTop="20dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="@string/howto_step3"-->
+<!--    android:textAlignment="viewStart"-->
+<!--    android:textColor="@color/black"-->
+<!--    android:textSize="10sp"-->
+<!--    android:textStyle="bold"-->
+<!--    app:layout_constraintEnd_toEndOf="@+id/textView4"-->
+<!--    app:layout_constraintHorizontal_bias="0.134"-->
+<!--    app:layout_constraintStart_toStartOf="@+id/textView4"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/howto_step2" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/enterwebsite"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginStart="14dp"-->
+<!--    android:layout_marginTop="12dp"-->
+<!--    android:layout_marginEnd="244dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="@string/enterwebsite"-->
+<!--    android:textColor="#F4F4F4"-->
+<!--    android:textStyle="italic"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.0"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/textView4" />-->
+
+<!--<EditText-->
+<!--    android:id="@+id/editTextTextMultiLine"-->
+<!--    android:layout_width="365dp"-->
+<!--    android:layout_height="34dp"-->
+<!--    android:layout_marginStart="16dp"-->
+<!--    android:layout_marginTop="2dp"-->
+<!--    android:layout_marginEnd="31dp"-->
+<!--    android:layout_marginBottom="125dp"-->
+<!--    android:background="@drawable/shadowbox"-->
+<!--    android:ems="10"-->
+<!--    android:gravity="start|top"-->
+<!--    android:inputType="textMultiLine"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="1.0"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/enterwebsite"-->
+<!--    app:layout_constraintVertical_bias="0.0"-->
+<!--    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
+
+
+<!--<EditText-->
+<!--    android:id="@+id/editTextTextMultiLine2"-->
+<!--    android:layout_width="363dp"-->
+<!--    android:layout_height="94dp"-->
+<!--    android:layout_marginStart="17dp"-->
+<!--    android:layout_marginTop="29dp"-->
+<!--    android:layout_marginEnd="31dp"-->
+<!--    android:layout_marginBottom="2dp"-->
+<!--    android:background="@drawable/shadowbox"-->
+<!--    android:ems="10"-->
+<!--    android:gravity="start|top"-->
+<!--    android:inputType="textMultiLine"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.0"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"-->
+<!--    app:layout_constraintVertical_bias="0.0"-->
+<!--    tools:ignore="SpeakableTextPresentCheck" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/textView5"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_marginStart="18dp"-->
+<!--    android:layout_marginTop="7dp"-->
+<!--    android:layout_marginEnd="336dp"-->
+<!--    android:layout_marginBottom="3dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="Enter Article"-->
+<!--    android:textColor="#FBFAFA"-->
+<!--    android:textStyle="italic"-->
+<!--    app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.0"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"-->
+<!--    app:layout_constraintVertical_bias="0.25" />-->
+
+<!--<androidx.appcompat.widget.AppCompatButton-->
+<!--    android:id="@+id/urlcheck"-->
+<!--    android:layout_width="65dp"-->
+<!--    android:layout_height="31dp"-->
+<!--    android:layout_marginBottom="48dp"-->
+<!--    android:background="@drawable/roundbtnselector"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="Check"-->
+<!--    android:textSize="8sp"-->
+<!--    android:textStyle="bold"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintHorizontal_bias="0.462"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    tools:ignore="TouchTargetSizeCheck" />-->
+
+<!--<TextView-->
+<!--    android:id="@+id/true_false"-->
+<!--    android:layout_width="144dp"-->
+<!--    android:layout_height="21dp"-->
+<!--    android:layout_marginStart="178dp"-->
+<!--    android:layout_marginTop="12dp"-->
+<!--    android:layout_marginEnd="206dp"-->
+<!--    android:fontFamily="@font/montserrat"-->
+<!--    android:text="@string/true_false"-->
+<!--    android:textAlignment="center"-->
+<!--    android:textColor="#FFFFFF"-->
+<!--    android:textStyle="italic"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/urlcheck"-->
+<!--    app:layout_constraintVertical_bias="0.0" />-->
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
