Changes to FE code

--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,6 @@
             android:id="@+id/textView12"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="#B6A4A4"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -90,7 +89,6 @@
             android:layout_width="match_parent"
             android:layout_height="17dp"
             android:layout_marginTop="55dp"
-            android:background="#B5A3A3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -168,6 +166,9 @@
             android:id="@+id/textView16"
             android:layout_width="358dp"
             android:layout_height="210dp"
+            android:fontFamily="@font/montserrat"
+            android:textAlignment="center"
+            android:textStyle="italic"
             app:layout_constraintBottom_toTopOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -178,6 +179,7 @@
             android:layout_width="358dp"
             android:layout_height="210dp"
             android:layout_marginTop="242dp"
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
@@ -219,7 +221,10 @@
             android:background="#252B50"
             android:fontFamily="@font/montserrat"
             android:text='View All Fake News'
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/textView16"
             app:layout_constraintEnd_toEndOf="@+id/textView16"
             app:layout_constraintHorizontal_bias="0.666"
@@ -235,7 +240,7 @@
             android:layout_marginEnd="19dp"
             android:layout_marginBottom="11dp"
             android:fontFamily="@font/montserrat"
-            android:text="ReadMore>>"
+            android:text="Read More >>"
             android:textColor="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="@+id/textView16"
             app:layout_constraintEnd_toEndOf="@+id/textView16"
@@ -283,7 +288,11 @@
             android:background="#252B50"
             android:fontFamily="@font/montserrat"
             android:text="View All True News"
+            android:textAlignment="center"
+            android:textAllCaps="false"
             android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="@+id/textView17"
             app:layout_constraintStart_toStartOf="@+id/textView17"
@@ -299,6 +308,9 @@
             android:background="#252B50"
             android:fontFamily="@font/montserrat"
             android:text="View All News"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="italic"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="@+id/textView18"
@@ -314,11 +326,11 @@
             android:layout_marginTop="185dp"
             android:layout_marginBottom="6dp"
             android:fontFamily="@font/montserrat"
-            android:text="ReadMore>>"
+            android:text="Read More >>"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="@+id/textView20"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.942"
             app:layout_constraintStart_toStartOf="@+id/textView20"
             app:layout_constraintTop_toTopOf="@+id/imageView9"
             app:layout_constraintVertical_bias="0.0" />
@@ -330,7 +342,7 @@
             android:layout_marginTop="181dp"
             android:layout_marginBottom="10dp"
             android:shadowColor="#FBF7F7"
-            android:text="ReadMore>>"
+            android:text="Read More >>"
             android:fontFamily="@font/montserrat"
             android:textColor="#F4F4F4"
             app:layout_constraintBottom_toBottomOf="@+id/textView21"
