--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_manith_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_manith_details.xml
@@ -33,11 +33,12 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="340dp"
-        android:layout_height="275dp"
+        android:layout_width="209dp"
+        android:layout_height="260dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/shadowbox"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
