--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_pasath_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_pasath_details.xml
@@ -30,11 +30,12 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="340dp"
-        android:layout_height="275dp"
+        android:layout_width="228dp"
+        android:layout_height="283dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/shadowbox"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
