--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_yasindu_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_yasindu_details.xml
@@ -29,19 +29,20 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="340dp"
-        android:layout_height="275dp"
+        android:layout_width="194dp"
+        android:layout_height="255dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/shadowbox"
         android:contentDescription="@string/todo_"
-        app:srcCompat="@drawable/yasindu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.085"
+        app:srcCompat="@drawable/yasindu"
         tools:ignore="ImageContrastCheck" />
 
     <TextView
