--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -44,7 +44,7 @@
             android:id="@+id/newsnews"
             android:layout_width="32sp"
             android:layout_height="32sp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="492dp"
             android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -109,7 +109,7 @@
             android:id="@+id/contact"
             android:layout_width="32sp"
             android:layout_height="32sp"
-            android:layout_marginEnd="48dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="492dp"
             android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -226,7 +226,7 @@
             android:layout_marginBottom="125dp"
             android:background="@drawable/shadowbox"
             android:ems="10"
-            android:textColor="#FBFAFA"
+            android:textColor="#000000"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -247,7 +247,7 @@
             android:layout_marginEnd="31dp"
             android:layout_marginBottom="2dp"
             android:background="@drawable/shadowbox"
-            android:textColor="#FBFAFA"
+            android:textColor="#000000"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
