--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
@@ -18,7 +18,8 @@
         android:layout_marginBottom="56dp"
         android:background="@drawable/shadowbox"
         android:fontFamily="@font/montserrat"
-        android:isScrollContainer="true"
+        android:scrollbars="vertical"
+        android:maxLines="10000"
         android:textStyle="italic"
         android:textAlignment="center"
         android:textAllCaps="true"
