--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_faq.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_faq.xml
@@ -21,6 +21,8 @@
         android:fontFamily="@font/montserrat"
         android:text="@string/faq"
         android:textAlignment="center"
+        android:scrollbars="vertical"
+        android:maxLines="10000"
         android:textColor="#000000"
         android:textSize="12sp"
         android:textStyle="italic"
