--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
@@ -112,46 +112,51 @@
             android:id="@+id/imageButton2"
             android:layout_width="45dp"
             android:layout_height="44dp"
+            android:layout_marginStart="216dp"
+            android:layout_marginEnd="80dp"
             android:background="#24cce3"
             android:src="@drawable/factcheck"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.647"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton9"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView15"
-            app:layout_constraintVertical_bias="0.333"
+            app:layout_constraintVertical_bias="0.666"
             tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <ImageButton
             android:id="@+id/imageButton3"
             android:layout_width="46dp"
             android:layout_height="44dp"
+            android:layout_marginStart="20dp"
             android:background="#24cce3"
             android:src="@drawable/newnews"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.045"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton8"
+            app:layout_constraintHorizontal_bias="0.155"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView15"
+            app:layout_constraintVertical_bias="0.333"
             tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <ImageButton
             android:id="@+id/imageButton8"
             android:layout_width="45dp"
             android:layout_height="43dp"
+            android:layout_marginEnd="60dp"
             android:background="#24cce3"
             android:src="@drawable/latestnews"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintEnd_toEndOf="@+id/textView15"
-            app:layout_constraintHorizontal_bias="0.336"
-            app:layout_constraintStart_toStartOf="@+id/textView15"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
             app:layout_constraintTop_toTopOf="@+id/textView15"
+            app:layout_constraintVertical_bias="0.25"
             tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <ImageButton
             android:id="@+id/imageButton9"
             android:layout_width="46dp"
             android:layout_height="44dp"
+            android:layout_marginEnd="20dp"
             android:background="#24cce3"
             android:src="@drawable/team"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
