--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
@@ -19,6 +19,8 @@
         android:background="@drawable/shadowbox"
         android:isScrollContainer="true"
         android:textStyle="italic"
+        android:scrollbars="vertical"
+        android:maxLines="10000"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
